name:              SpaceTexture
Build-Type:        Simple
cabal-version:     >= 1.2
version:           0.1
author:            Adam Cardenas
maintainer:        cevaris@gmail.com
category:          Graphics

extra-source-files:  readme.md

executable SpaceTexture
    hs-source-dirs:  src
                     src/Graphics/Object
                     src/Graphics/Util
                     src/Graphics/Scene
                     src/Binding/
    main-is:         SpaceTexture.hs
    build-depends:   base,
                     GLUT,
                     OpenGLRaw,
                     gloss,
                     split,
                     random